test/sema/typeck/trait/self-super-static-call.out
error: identifier expected.
--> self-super-static-call.dora:3:15
 | trait Foo {
 |     fn make() {
 |         Self::super::Foo()
                 ~~~~~
 |     }
 | }
1 error found.
