test/sema/typeck/trait/self-super-static-call.dora
trait Foo {
    fn make() {
        Self::super::Foo()
    }
}
